# EPGC10

./: .gitmodules  CMakeLists.txt  README.md
docs/: README.md
fonts/: JuliaMono_Regular_14.c  JuliaMono_Regular_16.c  JuliaMono_Regular_20.c  jetbrains_mono_regular_20.c  noto_sans_math_14.c  noto_sans_math_16.c  noto_sans_math_regular_comb_14.c  noto_sans_math_regular_comb_16.c  noto_sans_regular_14.c  noto_sans_regular_16.c
src/core/: evaluator.c  evaluator.h  interpreter.c  interpreter.h  lexer.c  lexer.h  parser.c  parser.h  repl.c
src/core/interpreter/: error.c  error.h  evaluator.c  evaluator.h  interpreter.c  lexer.c  lexer.h  parser.c  parser.h  repl.c
src/ui/: button_matrix.c  button_matrix.h  button_matrix_callbacks.c  button_matrix_callbacks.h  button_matrix_down_callback.c  button_matrix_down_callback.h  button_matrix_down_draw_callback.c  button_matrix_down_draw_callback.h  button_matrix_mid_callback.c  button_matrix_mid_callback.h  button_matrix_nav_callback.c  button_matrix_nav_callback.h  button_matrix_up_callback.c  button_matrix_up_callback.h  error_popup.c  error_popup.h  input_area.c  input_area.h  lv_conf.h  screen_graph.c  screen_graph.h  screen_graph_input.c  screen_graph_input.h  screen_menu.c  screen_menu.h  screen_settings.c  screen_settings.h  status_bar.c  status_bar.h  text.c  text.h  toolbox_popup.c  toolbox_popup.h  ui.c  ui.h  var_popup.c  var_popup.h
test/: test_lexer.c
